// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`input (address) should match snapshot (bool) 1`] = `
<div
  className="c-sidebar__input-box"
>
  <input
    className="c-sidebar__input qa-account-input"
    onChange={[Function]}
    placeholder="Address"
    value=""
  />
  <button
    className="c-sidebar__submit qa-account-submit"
    onClick={[Function]}
  >
    Reset
  </button>
</div>
`;

exports[`input (address) should match snapshot (bool, text) 1`] = `
<div
  className="c-sidebar__input-box"
>
  <input
    className="c-sidebar__input qa-account-input"
    onChange={[Function]}
    placeholder="Address"
    value="12345"
  />
  <button
    className="c-sidebar__submit qa-account-submit"
    onClick={[Function]}
  >
    Set
  </button>
</div>
`;

exports[`input (address) should match snapshot (default) 1`] = `
<div
  className="c-sidebar__input-box"
>
  <input
    className="c-sidebar__input qa-account-input"
    onChange={[Function]}
    placeholder="Address"
    value=""
  />
  <button
    className="c-sidebar__submit qa-account-submit"
    onClick={[Function]}
  >
    Set
  </button>
</div>
`;

exports[`input (avatar) should match snapshot (bool) 1`] = `
<div
  className="c-sidebar__input-box"
>
  <input
    className="c-sidebar__input qa-account-input"
    onChange={[Function]}
    placeholder="Avatar"
    value=""
  />
  <button
    className="c-sidebar__submit qa-account-submit"
    onClick={[Function]}
  >
    Reset
  </button>
</div>
`;

exports[`input (avatar) should match snapshot (bool, text) 1`] = `
<div
  className="c-sidebar__input-box"
>
  <input
    className="c-sidebar__input qa-account-input"
    onChange={[Function]}
    placeholder="Avatar"
    value="https://www.example.com/avatar.jpg"
  />
  <button
    className="c-sidebar__submit qa-account-submit"
    onClick={[Function]}
  >
    Set
  </button>
</div>
`;

exports[`input (avatar) should match snapshot (default) 1`] = `
<div
  className="c-sidebar__input-box"
>
  <input
    className="c-sidebar__input qa-account-input"
    onChange={[Function]}
    placeholder="Avatar"
    value=""
  />
  <button
    className="c-sidebar__submit qa-account-submit"
    onClick={[Function]}
  >
    Set
  </button>
</div>
`;
